--- a/Livrable.tex
+++ b/Livrable.tex
@@ -222,7 +222,7 @@
 \IfFileExists{xurl.sty}{\usepackage{xurl}}{} % add URL line breaks if available
 \urlstyle{same} % disable monospaced font for URLs
 \hypersetup{
-  pdftitle={Delivrable},
+  pdftitle={Delivrable WP IN construction Version: March 01 / 2023 10},
   colorlinks=true,
   linkcolor={blue},
   filecolor={Maroon},
@@ -230,7 +230,7 @@
   urlcolor={blue},
   pdfcreator={LaTeX via pandoc}}
 
-\title{Delivrable}
+\title{Delivrable WP IN construction Version: March 01 / 2023 10}
 \author{}
 \date{}
 
@@ -322,7 +322,7 @@ This document reflects only the authors' view and the Commission is not responsi
 
 \newpage
 
-\ifdefined\Shaded\renewenvironment{Shaded}{\begin{tcolorbox}[boxrule=0pt, sharp corners, interior hidden, breakable, enhanced, borderline west={3pt}{0pt}{shadecolor}, frame hidden]}{\end{tcolorbox}}\fi
+\ifdefined\Shaded\renewenvironment{Shaded}{\begin{tcolorbox}[frame hidden, borderline west={3pt}{0pt}{shadecolor}, sharp corners, enhanced, breakable, boxrule=0pt, interior hidden]}{\end{tcolorbox}}\fi
 
 \renewcommand*\contentsname{Table of contents}
 {
@@ -1737,7 +1737,7 @@ collected XX\textasciitilde kg per month.
 
 \end{figure}
 
-\begin{tcolorbox}[enhanced jigsaw, colback=white, bottomtitle=1mm, colframe=quarto-callout-note-color-frame, arc=.35mm, toptitle=1mm, colbacktitle=quarto-callout-note-color!10!white, title=\textcolor{quarto-callout-note-color}{\faInfo}\hspace{0.5em}{Key Performance Indicator of the Recovery process}, leftrule=.75mm, breakable, opacityback=0, titlerule=0mm, toprule=.15mm, left=2mm, bottomrule=.15mm, coltitle=black, rightrule=.15mm, opacitybacktitle=0.6]
+\begin{tcolorbox}[enhanced jigsaw, opacityback=0, rightrule=.15mm, leftrule=.75mm, colframe=quarto-callout-note-color-frame, breakable, toprule=.15mm, bottomtitle=1mm, left=2mm, colback=white, title=\textcolor{quarto-callout-note-color}{\faInfo}\hspace{0.5em}{Key Performance Indicator of the Recovery process}, coltitle=black, colbacktitle=quarto-callout-note-color!10!white, toptitle=1mm, arc=.35mm, bottomrule=.15mm, opacitybacktitle=0.6, titlerule=0mm]
 
 In terms of \emph{KPI} of the recovery, from February 2022 to February
 2023, we have collected a total of \(94.37~kg\) of plastic waste using 8
