--- a/Livrable.tex
+++ b/Livrable.tex
@@ -222,7 +222,7 @@
 \IfFileExists{xurl.sty}{\usepackage{xurl}}{} % add URL line breaks if available
 \urlstyle{same} % disable monospaced font for URLs
 \hypersetup{
-  pdftitle={Delivrable WP IN construction Version: March 01 / 2023 10},
+  pdftitle={Delivrable WP IN construction Version: March 01 / 2023},
   colorlinks=true,
   linkcolor={blue},
   filecolor={Maroon},
@@ -230,7 +230,7 @@
   urlcolor={blue},
   pdfcreator={LaTeX via pandoc}}
 
-\title{Delivrable WP IN construction Version: March 01 / 2023 10}
+\title{Delivrable WP IN construction Version: March 01 / 2023}
 \author{}
 \date{}
 
@@ -322,7 +322,7 @@ This document reflects only the authors' view and the Commission is not responsi
 
 \newpage
 
-\ifdefined\Shaded\renewenvironment{Shaded}{\begin{tcolorbox}[frame hidden, borderline west={3pt}{0pt}{shadecolor}, sharp corners, enhanced, breakable, boxrule=0pt, interior hidden]}{\end{tcolorbox}}\fi
+\ifdefined\Shaded\renewenvironment{Shaded}{\begin{tcolorbox}[borderline west={3pt}{0pt}{shadecolor}, interior hidden, enhanced, frame hidden, boxrule=0pt, breakable, sharp corners]}{\end{tcolorbox}}\fi
 
 \renewcommand*\contentsname{Table of contents}
 {
@@ -1180,7 +1180,7 @@ moulding}\label{desktop-injection-moulding}}
 Injection moulding is one of the most used technique to form plastic
 materials.\\
 The major point in the `Green Fablab' case is to propose a manual
-recycled aspect to possible reuse the plastic waste into sheet
+recycled aspect to possible reuse the plastic waste into sheet.
 
 \hypertarget{d-printing-process-fused-filament-granular-fabrication-fff-fgf}{%
 \paragraph{3D printing process: Fused Filament \& Granular Fabrication
@@ -1390,13 +1390,15 @@ capacity to produce the product. In the case that it cannot be produced,
 it is necessary to notify immediately together with the arguments why it
 cannot be produced and offer ways of improvement.
 
+\includegraphics{figures/Step-1.png}\{\#fig-step1 width = `50\%'\}
+
 \hypertarget{step-2-validation-of-the-technical-specifications-of-model-to-fabricate}{%
 \subsection{Step 2 -- Validation of the technical specifications of
 model to
 fabricate}\label{step-2-validation-of-the-technical-specifications-of-model-to-fabricate}}
 
 In this step, the main purpose is to establish the criteria for the
-validation specifications of the model to faricate.
+validation specifications of the model to fabricate.
 
 In the case of the Green FabLab, three main criteria were established
 
@@ -1737,7 +1739,7 @@ collected XX\textasciitilde kg per month.
 
 \end{figure}
 
-\begin{tcolorbox}[enhanced jigsaw, opacityback=0, rightrule=.15mm, leftrule=.75mm, colframe=quarto-callout-note-color-frame, breakable, toprule=.15mm, bottomtitle=1mm, left=2mm, colback=white, title=\textcolor{quarto-callout-note-color}{\faInfo}\hspace{0.5em}{Key Performance Indicator of the Recovery process}, coltitle=black, colbacktitle=quarto-callout-note-color!10!white, toptitle=1mm, arc=.35mm, bottomrule=.15mm, opacitybacktitle=0.6, titlerule=0mm]
+\begin{tcolorbox}[enhanced jigsaw, title=\textcolor{quarto-callout-note-color}{\faInfo}\hspace{0.5em}{Key Performance Indicator of the Recovery process}, arc=.35mm, opacitybacktitle=0.6, rightrule=.15mm, colframe=quarto-callout-note-color-frame, coltitle=black, breakable, colback=white, bottomtitle=1mm, colbacktitle=quarto-callout-note-color!10!white, toptitle=1mm, left=2mm, titlerule=0mm, leftrule=.75mm, bottomrule=.15mm, toprule=.15mm, opacityback=0]
 
 In terms of \emph{KPI} of the recovery, from February 2022 to February
 2023, we have collected a total of \(94.37~kg\) of plastic waste using 8
