--- a/Livrable.tex
+++ b/Livrable.tex
@@ -322,7 +322,7 @@ This document reflects only the authors' view and the Commission is not responsi
 
 \newpage
 
-\ifdefined\Shaded\renewenvironment{Shaded}{\begin{tcolorbox}[borderline west={3pt}{0pt}{shadecolor}, interior hidden, enhanced, frame hidden, boxrule=0pt, breakable, sharp corners]}{\end{tcolorbox}}\fi
+\ifdefined\Shaded\renewenvironment{Shaded}{\begin{tcolorbox}[interior hidden, breakable, enhanced, borderline west={3pt}{0pt}{shadecolor}, boxrule=0pt, frame hidden, sharp corners]}{\end{tcolorbox}}\fi
 
 \renewcommand*\contentsname{Table of contents}
 {
@@ -1378,8 +1378,19 @@ Specification}\label{step-1-receive-design-and-specification}}
 
 The first step in the reception of the design models and specifications
 from the INEDIT platform. The starting point of this activity is the
-reception of the respective documents that contains the 3D model to be
-manufactured by the use case.
+downloading the respective documents that contains the 3D model to be
+manufactured by the use case as presented in the Figure~\ref{fig-step1}.
+
+\begin{figure}[H]
+
+{\centering \includegraphics[width=0.8\textwidth,height=\textheight]{figures/Step-1.png}
+
+}
+
+\caption{\label{fig-step1}Reception of the exploitable documents for the
+fabrication process}
+
+\end{figure}
 
 One of the outputs of the co-creation phase of INEDIT is the creation of
 a first initial model that can be exploitable in the open manufacturing
@@ -1390,17 +1401,24 @@ capacity to produce the product. In the case that it cannot be produced,
 it is necessary to notify immediately together with the arguments why it
 cannot be produced and offer ways of improvement.
 
-\includegraphics{figures/Step-1.png}\{\#fig-step1 width = `50\%'\}
-
 \hypertarget{step-2-validation-of-the-technical-specifications-of-model-to-fabricate}{%
 \subsection{Step 2 -- Validation of the technical specifications of
 model to
 fabricate}\label{step-2-validation-of-the-technical-specifications-of-model-to-fabricate}}
 
-In this step, the main purpose is to establish the criteria for the
-validation specifications of the model to fabricate.
+The main purpose of the second step is to establish the criteria for the
+validation specifications of the model to fabricate. In the case of the
+Green FabLab, three main criteria were established:
 
-In the case of the Green FabLab, three main criteria were established
+\begin{figure}[H]
+
+{\centering \includegraphics[width=0.9\textwidth,height=\textheight]{figures/Step-2.png}
+
+}
+
+\caption{\label{fig-step2}Validation of the printing conditions}
+
+\end{figure}
 
 \begin{enumerate}
 \def\labelenumi{\arabic{enumi}.}
@@ -1412,6 +1430,61 @@ In the case of the Green FabLab, three main criteria were established
 \item
   Concerning the printability
 \end{enumerate}
+
+Using the software for the , we are in measure to validate the global
+dimmensions of the proposed part. This needs to be in the range of the
+maximal working dimensions of the 3D printers. Another aspect, relies on
+the orientation of the part.
+
+Concerning the printability, based on the characteristics of the
+material and the variables of the machine (namely, the temperatures of
+the barrel, the rotation of the stepper motors and the diamter of the
+nozzle). Different tests of printability were made in order to have a
+baseline of usable printed part as illustrated in the
+Figure~\ref{fig-printability}.
+
+\begin{figure}
+
+\begin{minipage}[t]{\linewidth}
+
+{\centering 
+
+\raisebox{-\height}{
+
+\includegraphics{figures/Results-00.jpg}
+
+}
+
+}
+
+\subcaption{\label{fig-printability1}Test of printability}
+\end{minipage}%
+\newline
+\begin{minipage}[t]{\linewidth}
+
+{\centering 
+
+\raisebox{-\height}{
+
+\includegraphics{figures/Swapnil-Results-00.png}
+
+}
+
+}
+
+\subcaption{\label{fig-printability2}Validation of the printability}
+\end{minipage}%
+
+\caption{\label{fig-printability}Experimental protocol to validate the
+printability tests.}
+
+\end{figure}
+
+The test of printability consist in the selection the technical
+parameters of the machine () Using a Design of Experiments (DoE)
+approach, and a basic benchmarking models (for instance lines, cubes,
+pyramides in Figure~\ref{fig-printability2}), it is possible to identify
+the errors in the printing process.
 
 \hypertarget{step-3-identify-local-source-of-plastic-waste}{%
 \subsection{Step 3 -- Identify local source of plastic
@@ -1458,21 +1531,21 @@ the implementation of a local recycling network of plastic waste at the
 neighborhood of Rives de Meurthe at Nancy.
 
 Based on this first step, it was possible to identify relevant
-stakehoders in the local ecosystems to inquire on the issue of plastic
+stakeholders in the local ecosystems to inquire on the issue of plastic
 wastes source. First, they needeed to be in a geographical range
-perimeter (less than 2km around the Green Fablab) following the
-observations of Santander et al.
-(\protect\hyperlink{ref-Santander2020}{2020}). Limiting the geographical
-perimeter of collection helps in the reduction of environmental impact
-because of the reduction of transport impact. Second, the
-diversification of the actor profile that can be sensibilized to the
-participation of the collection (general public, employees, students)
-and/or stakeholder's status (Public, Private, Associative) where the
-smart collector can be deployed. These two elements were essential to
-consider because the experimentation seeks to establish a baseline of
-the recovery process given the uncertainties of participation of the
-local context and the sensitization to the management of the plastic by
-the general public.
+perimeter (less than 2km around the facilities) following the
+observations of (\protect\hyperlink{ref-CruzSanchez2020}{Cruz Sanchez et
+al., 2020}; \protect\hyperlink{ref-Santander2020}{Santander et al.,
+2020}). Limiting the geographical perimeter of collection helps in the
+reduction of environmental impact because of the reduction of transport
+impact. Second, the diversification of the actor profile that can be
+sensibilized to the participation of the collection (general public,
+employees, students) and/or stakeholder's status (Public, Private,
+Associative) where the smart collector can be deployed. These two
+elements were essential to consider because the experimentation seeks to
+establish a baseline of the recovery process given the uncertainties of
+participation of the local context and the sensitization to the
+management of the plastic by the general public.
 
 \begin{figure}
 
@@ -1739,7 +1812,7 @@ collected XX\textasciitilde kg per month.
 
 \end{figure}
 
-\begin{tcolorbox}[enhanced jigsaw, title=\textcolor{quarto-callout-note-color}{\faInfo}\hspace{0.5em}{Key Performance Indicator of the Recovery process}, arc=.35mm, opacitybacktitle=0.6, rightrule=.15mm, colframe=quarto-callout-note-color-frame, coltitle=black, breakable, colback=white, bottomtitle=1mm, colbacktitle=quarto-callout-note-color!10!white, toptitle=1mm, left=2mm, titlerule=0mm, leftrule=.75mm, bottomrule=.15mm, toprule=.15mm, opacityback=0]
+\begin{tcolorbox}[enhanced jigsaw, title=\textcolor{quarto-callout-note-color}{\faInfo}\hspace{0.5em}{Key Performance Indicator of the Recovery process}, colback=white, colbacktitle=quarto-callout-note-color!10!white, coltitle=black, bottomtitle=1mm, rightrule=.15mm, left=2mm, colframe=quarto-callout-note-color-frame, opacityback=0, titlerule=0mm, arc=.35mm, bottomrule=.15mm, leftrule=.75mm, toprule=.15mm, breakable, opacitybacktitle=0.6, toptitle=1mm]
 
 In terms of \emph{KPI} of the recovery, from February 2022 to February
 2023, we have collected a total of \(94.37~kg\) of plastic waste using 8
